# foodplan_admin

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md  telegram_bot.py  test.py
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_telegramaccount.py  0002_telegramuser_customuser_telegram.py  0003_alter_telegramaccount_telegram_id.py  0004_alter_telegramaccount_telegram_id.py  0005_remove_telegramaccount_id_and_more.py
config/: settings.py  urls.py
recipes/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_image_alter_ingredient_price_and_more.py  0003_ingredient_calories_recipe_guide.py  0004_recipe_likes.py  0005_recipe_dislikes.py  0006_recipe_is_teaser_alter_recipe_dislikes_and_more.py  0007_alter_recipe_is_teaser.py  0008_preference_foodplan_recipe_preferences.py  0009_alter_recipe_dislikes_alter_recipe_likes.py  0010_foodplan_recipes_count_foodplan_start_date_and_more.py  0011_alter_foodplan_start_date.py
subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_remove_usersubscription_end_date_and_more.py  0003_alter_payment_created_at.py  0004_alter_payment_user.py  0005_rename_user_payment_tg_account.py
